fixed gap header menu, remove padding top section-manifestation @media 1440px

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -175,5 +175,13 @@
     &__logo {
       max-width: 140px;
     }
+    .menu{
+      gap: 30px;
+    }
+  }
+}
+@include mixins.respond-to(variables.$xxl){
+  .header .menu{
+    gap: 36px;
   }
 }
