--- a/src/scss/layout/section/section-manifestation.scss
+++ b/src/scss/layout/section/section-manifestation.scss
@@ -373,6 +373,12 @@
   }
 }
 
+@include mixins.respond-to(variables.$xl){
+.section.section-manifestation{
+  padding-top: 0;
+}
+}
+
 @include mixins.respond-to(variables.$xxl) {
   .image {
     height: 560px;
